# fskencoder

./: CMakeLists.txt  README.md
src/: crc16.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  fec.cpp  fec.h  frame.cpp  frame.h  main.cpp  wav_io.cpp  wav_io.h
